# connectedvision

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  setEnv.bat  setEnv.sh
apps/Demo/Skeleton/: generate.py  moduleStructure.json
build_env/Conan/: install.py  tools.py
build_env/Conan/profiles/: armv7hf
build_env/cmake/: CMakeLists.txt  common.cmake  conan.cmake  toolchain_armv7hf.cmake
build_env/cmake/Core/: CMakeLists.txt
build_env/cmake/Modules/DirectoryIterator/: CMakeLists.txt
build_env/cmake/Modules/DummyBoundingBoxes/: CMakeLists.txt
build_env/cmake/Modules/FileExport/: CMakeLists.txt
build_env/cmake/Modules/FileImporter/: CMakeLists.txt
build_env/cmake/Modules/RTPImporter/: CMakeLists.txt
build_env/cmake/Modules/SyntheticVideo/: CMakeLists.txt
build_env/cmake/Modules/ThumbnailGenerator/: CMakeLists.txt
build_env/cmake/Modules/VideoImporter/: CMakeLists.txt
build_env/cmake/SystemTestServer/: CMakeLists.txt
build_env/cmake/SystemTestServerWithCore/: CMakeLists.txt
build_env/cmake/SystemTestServerWithCore/Core/: CMakeLists.txt
build_env/cmake/SystemTestServerWithCore/Modules/DirectoryIterator/: CMakeLists.txt
build_env/cmake/SystemTestServerWithCore/Modules/DummyBoundingBoxes/: CMakeLists.txt
build_env/cmake/SystemTestServerWithCore/Modules/FileExport/: CMakeLists.txt
build_env/cmake/SystemTestServerWithCore/Modules/FileImporter/: CMakeLists.txt
build_env/cmake/SystemTestServerWithCore/Modules/RTPImporter/: CMakeLists.txt
build_env/cmake/SystemTestServerWithCore/Modules/SyntheticVideo/: CMakeLists.txt
build_env/cmake/SystemTestServerWithCore/Modules/ThumbnailGenerator/: CMakeLists.txt
build_env/cmake/SystemTestServerWithCore/Modules/VideoImporter/: CMakeLists.txt
build_env/cmake/UnitTest/: CMakeLists.txt
build_env/cmake/UnitTestWithCore/: CMakeLists.txt
build_env/cmake/UnitTestWithCore/Core/: CMakeLists.txt
core/def/: HostStatus.schema  ModuleDescription.schema  ModuleStatus.schema  PinDescription.schema  generic_config.schema  generic_status.schema
core/include/: ConnectedVision.h  ConnectedVision_ConcurrentQueue.h  ConnectedVision_Exceptions.h  ConnectedVision_SmartPointer.h  ConnectedVision_Thread.h  IConnectedVisionModule.h  IDataClassJSON.h  IDataSource.h  IHTTPAbstraction.h  ILogging.h  IModuleEnvironment.h  IModuleSource.h  IStore.h  IStoreCV.h  general.h
core/src/: CNamedResourcesPool.cpp  CNamedResourcesPool.h  ConnectedVisionAlgorithmDispatcher.cpp  ConnectedVisionAlgorithmDispatcher.h  ConnectedVisionAlgorithmWorker.cpp  ConnectedVisionAlgorithmWorker.h  ConnectedVisionInputPin.h  ConnectedVisionInputPinControl.cpp  ConnectedVisionInputPinData.cpp  ConnectedVisionModule.cpp  ConnectedVisionModule.h  ConnectedVisionOutputPin.cpp  ConnectedVisionOutputPin.h  DBConnection.cpp  DBConnection.h  DataSource_Memory_BaseClass.cpp  DataSource_Memory_BaseClass.h  DataSource_Memory_BaseClass_specializations.cpp  DataSource_REST_BaseClass.cpp  DataSource_REST_BaseClass.h  ModuleSource_Memory_BaseClass.cpp  ModuleSource_Memory_BaseClass.h  ModuleSource_REST_BaseClass.cpp  ModuleSource_REST_BaseClass.h  generate.py  generatorSettings.json  helper.cpp  helper.h
core/src/DataHandling/: DataAllocator_Pool.cpp  DataAllocator_Pool.h  DataAllocator_Primitive.cpp  DataAllocator_Primitive.h  Store_Cache.cpp  Store_Cache.h  Store_Manager_Basic.cpp  Store_Manager_Basic.h  Store_Manager_Dynamic.cpp  Store_Manager_Dynamic.h  Store_Manager_Pool.cpp  Store_Manager_Pool.h  Store_Manager_Ringbuffer_Pool.h  Store_Ringbuffer.cpp  Store_Ringbuffer.h  Store_SQLite_BaseClass.cpp  Store_SQLite_BaseClass.h
core/src/ErrorHandling/: CallStack.h  CallStack_GCC.cpp  CallStack_MSVC.cpp  Exception_CallStack.cpp  Exception_CallStack.h
core/src/HTTP/: HTTPClientPoco.cpp  HTTPClientPoco.h  HTTPSClientPoco.cpp  HTTPSClientPoco.h  HTTPSServerPoco.cpp  HTTPSServerPoco.h  HTTPServerPoco.cpp  HTTPServerPoco.h  HTTPTools.h  HTTPXClient.cpp  HTTPXClient.h
core/src/Module/: ConfigManager.cpp  ConfigManager.h  Module_BaseClass.cpp  Module_BaseClass.h  WorkerController.cpp  WorkerController.h  WorkerDispatcher.cpp  WorkerDispatcher.h  WorkerThread.cpp  WorkerThread.h  (+2 more)
docs/: Installation_Guide.adoc
docs/Development_Environment/: Build_Dependencies_on_Ubuntu_14_04_5.adoc
docs/HowTo/: Custom_OutputPin_with_OutputPin_Generic.adoc
docs/Software_Design/: ConnectedVision.eap  InputPin.adoc  Ringbuffer.adoc  Verglich Store als shared pointer vs open-close.adoc
gui/ImageGallery/: index.html
modules/: generate.py
modules/FileImporter/: generate.py
modules/ThumbnailGenerator/: generate.py
test/PerformanceTest/: Benchmark_Map.cpp  Benchmark_Sample.cpp  main.cpp
test/SystemTestSuite/: SystemTestSuite.js  SystemTestSuite.py  Tools.js  config.joe.json  generalModuleTests.js
test/UnitTest/: GeneratorTestCode.bat  GeneratorTestCode.py  GeneratorTestCode.schema  GeneratorTestCodeStructure.json  MixIn_IDataAllocator.cpp  MixIn_IDataAllocator.h  MixIn_IStore.cpp  MixIn_IStore.h  Store_Null.cpp  Store_Null.h  TestHelper_DataHandling.hpp  TestHelper_Module.hpp  TestHelper_StoreEnvironment.hpp  TestHelper_Store_SQLite.hpp  TestHelper_Threads.hpp  TestHelper_Threads_Linux.hpp  TestHelper_Threads_Windows.hpp  Test_AliasID.cpp  Test_CallStack.cpp  Test_ConcurrentQueue.cpp  Test_ConfigList.cpp  Test_ConfigManager.cpp  Test_ConfigPreprocessor.cpp  Test_DataAllocator_Pool.cpp  Test_DataAllocator_Primitive.cpp  Test_DynamicParameters.cpp  Test_GeneratedObject.cpp  Test_Generic_status.cpp  Test_HTTP_ServerPoco.cpp  Test_IDataAllocator.hpp  Test_ModuleBaseClass.cpp  Test_ModuleInputPins.cpp  Test_OutputPin_JSON.cpp  Test_RapidJSON.cpp  Test_Sample.cpp  Test_SmartPointer.cpp  Test_Store_Cache.cpp  Test_Store_Manager_Dynamic.cpp  Test_Store_Manager_Pool.cpp  Test_Store_Manager_Ringbuffer_GeneratedObject.cpp  (+17 more)
tools/CodeFromTemplate/: CodeFromTemplate.js  CreateItemForSchema.js  CreateItemList.js  RenderTemplate.js  SwigMacros.h  Utilities.js
tools/CodeFromTemplate/item_modules/cmake/: CMakeLists.txt  cmake.js
tools/Swagger2Markup/: generate.py
(+865 files in other folders)
